--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Todos</title>
-</head>
-<body>
-    <h1>Todos</h1>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Todos</title>
+    </head>
+    <body>
+        <h1>Todos</h1>
+
+        <form id="create-todo-form">
+            <div class="form-control">
+                <label for="title">Title</label>
+                <input type="text" name="title" id="title" />
+            </div>
+            <div class="form-control">
+                <label for="description">Description</label>
+                <input type="text" name="description" id="description" />
+            </div>
+            <div class="form-control">
+                <label for="due-date">Due Date</label>
+                <input type="date" name="dueDate" id="due-date" />
+            </div>
+            <div class="form-control">
+                <label for="priority">Priority</label>
+                <select name="priority" id="priority">
+                    <option value="">--Please choose an option--</option>
+                    <option value="high">High</option>
+                    <option value="medium">Medium</option>
+                    <option value="low">Low</option>
+                </select>
+            </div>
+            <button type="submit">Create</button>
+        </form>
+
+        <div id="todo-list"></div>
+    </body>
 </html>
