--- a/src/index.html
+++ b/src/index.html
@@ -3,36 +3,50 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+            rel="stylesheet"
+        />
         <title>Todos</title>
     </head>
     <body>
-        <h1>Todos</h1>
+        <div id="content">
+            <div id="sidebar">
+                <form id="create-todo-form">
+                    <div class="form-control">
+                        <label for="title">Title</label>
+                        <input type="text" name="title" id="title" />
+                    </div>
+                    <div class="form-control">
+                        <label for="description">Description</label>
+                        <input
+                            type="text"
+                            name="description"
+                            id="description"
+                        />
+                    </div>
+                    <div class="form-control">
+                        <label for="due-date">Due Date</label>
+                        <input type="date" name="dueDate" id="due-date" />
+                    </div>
+                    <div class="form-control">
+                        <label for="priority">Priority</label>
+                        <select name="priority" id="priority">
+                            <option value="">
+                                --Please choose an option--
+                            </option>
+                            <option value="high">High</option>
+                            <option value="medium">Medium</option>
+                            <option value="low">Low</option>
+                        </select>
+                    </div>
+                    <button type="submit">Create</button>
+                </form>
+            </div>
 
-        <form id="create-todo-form">
-            <div class="form-control">
-                <label for="title">Title</label>
-                <input type="text" name="title" id="title" />
+            <div id="todo-list">
+                <!-- <h2>Todo</h2> -->
             </div>
-            <div class="form-control">
-                <label for="description">Description</label>
-                <input type="text" name="description" id="description" />
-            </div>
-            <div class="form-control">
-                <label for="due-date">Due Date</label>
-                <input type="date" name="dueDate" id="due-date" />
-            </div>
-            <div class="form-control">
-                <label for="priority">Priority</label>
-                <select name="priority" id="priority">
-                    <option value="">--Please choose an option--</option>
-                    <option value="high">High</option>
-                    <option value="medium">Medium</option>
-                    <option value="low">Low</option>
-                </select>
-            </div>
-            <button type="submit">Create</button>
-        </form>
-
-        <div id="todo-list"></div>
+        </div>
     </body>
 </html>
