--- a/src/index.html
+++ b/src/index.html
@@ -13,10 +13,10 @@
         <div id="content">
             <div id="sidebar">
                 <form id="create-todo-form">
-                    <div class="form-control">
+                    <!-- <div class="form-control">
                         <label for="id">Id</label>
                         <input type="text" name="id" id="id" readonly/>
-                    </div>
+                    </div> -->
                     <div class="form-control">
                         <label for="title">Title</label>
                         <input type="text" name="title" id="title" />
@@ -24,9 +24,9 @@
                     <div class="form-control">
                         <label for="description">Description</label>
                         <input
-                            type="text"
-                            name="description"
-                            id="description"
+                        type="text"
+                        name="description"
+                        id="description"
                         />
                     </div>
                     <div class="form-control">
@@ -43,6 +43,10 @@
                             <option value="medium">Medium</option>
                             <option value="low">Low</option>
                         </select>
+                    </div>
+                    <div class="form-control">
+                        <label for="project">Project</label>
+                        <select name="project" id="project"></select>
                     </div>
                     <button type="submit">Create</button>
                 </form>
