--- a/src/index.html
+++ b/src/index.html
@@ -13,10 +13,10 @@
         <div id="content">
             <div id="sidebar">
                 <form id="create-todo-form">
-                    <!-- <div class="form-control">
+                    <div class="form-control">
                         <label for="id">Id</label>
                         <input type="text" name="id" id="id" readonly/>
-                    </div> -->
+                    </div>
                     <div class="form-control">
                         <label for="title">Title</label>
                         <input type="text" name="title" id="title" />
