add update todo logic and ui

--- a/src/index.html
+++ b/src/index.html
@@ -13,9 +13,9 @@
         <div id="content">
             <div id="sidebar">
                 <form id="create-todo-form">
-                    <div class="form-control">
+                    <div class="form-control hidden">
                         <label for="id">Id</label>
-                        <input type="text" name="id" id="id" readonly/>
+                        <input type="text" name="id" id="id" />
                     </div>
                     <div class="form-control">
                         <label for="title">Title</label>
@@ -24,9 +24,9 @@
                     <div class="form-control">
                         <label for="description">Description</label>
                         <input
-                        type="text"
-                        name="description"
-                        id="description"
+                            type="text"
+                            name="description"
+                            id="description"
                         />
                     </div>
                     <div class="form-control">
