--- a/src/index.html
+++ b/src/index.html
@@ -10,24 +10,12 @@
         <title>Todos</title>
     </head>
     <body>
-        <div id="content">
-            <div id="sidebar">
+        <div id="container">
+            <main>
                 <form id="create-todo-form">
-                    <div class="form-control hidden">
-                        <label for="id">Id</label>
-                        <input type="text" name="id" id="id" />
-                    </div>
                     <div class="form-control">
                         <label for="title">Title</label>
                         <input type="text" name="title" id="title" />
-                    </div>
-                    <div class="form-control">
-                        <label for="description">Description</label>
-                        <input
-                            type="text"
-                            name="description"
-                            id="description"
-                        />
                     </div>
                     <div class="form-control">
                         <label for="due-date">Due Date</label>
@@ -44,17 +32,48 @@
                             <option value="low">Low</option>
                         </select>
                     </div>
-                    <div class="form-control">
-                        <label for="project">Project</label>
-                        <select name="project" id="project"></select>
-                    </div>
-                    <button type="submit">Create</button>
+                    <button type="submit">Add</button>
                 </form>
-            </div>
 
-            <div id="todo-list">
-                <!-- <h2>Todo</h2> -->
-            </div>
+                <div id="todo-list"></div>
+            </main>
+
+            <aside>
+                <form id="edit-todo-form">
+                    <div class="form-control hidden">
+                        <label for="edit-id">Id</label>
+                        <input type="text" name="id" id="edit-id" />
+                    </div>
+                    <div class="form-control">
+                        <label for="edit-title">Title</label>
+                        <input type="text" name="title" id="edit-title" />
+                    </div>
+                    <div class="form-control">
+                        <label for="edit-due-date">Due Date</label>
+                        <input type="date" name="dueDate" id="edit-due-date" />
+                    </div>
+                    <div class="form-control">
+                        <label for="edit-priority">Priority</label>
+                        <select name="priority" id="edit-priority">
+                            <option value="">
+                                --Please choose an option--
+                            </option>
+                            <option value="high">High</option>
+                            <option value="medium">Medium</option>
+                            <option value="low">Low</option>
+                        </select>
+                    </div>
+                    <div class="form-control">
+                        <label for="edit-project">Project</label>
+                        <select name="project" id="edit-project"></select>
+                    </div>
+                    <div class="form-control">
+                        <label for="edit-notes">Notes</label>
+                        <textarea name="notes" id="edit-notes"></textarea>
+                    </div>
+                    <button type="submit">Update</button>
+                </form>
+            </aside>
         </div>
     </body>
 </html>
