--- a/src/index.html
+++ b/src/index.html
@@ -11,15 +11,27 @@
     </head>
     <body>
         <div id="container">
-            <main>
-                <form id="create-todo-form">
+            <div>
+                <form id="filter-todos-form">
                     <div class="form-control">
-                        <label for="title">Title</label>
-                        <input type="text" name="title" id="title" />
+                        <label for="filter-project">Project</label>
+                        <select name="project" id="filter-project"></select>
                     </div>
-                    <button type="submit">Add</button>
+                    <button type="submit">Filter</button>
                 </form>
+            </div>
 
+            <main>
+                <div id="test">
+                    <form id="create-todo-form">
+                        <div class="form-control">
+                            <label for="title">Title</label>
+                            <input type="text" name="title" id="title" />
+                        </div>
+                        <button type="submit">Add</button>
+                    </form>
+    
+                </div>
                 <div id="todo-list"></div>
             </main>
 
