add ability to add new projects

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,14 @@
                     </div>
                     <button type="submit">Filter</button>
                 </form>
+
+                <form id="new-project-form">
+                    <div class="form-control">
+                        <label for="new-project">Project</label>
+                        <input type="text" name="project" id="new-project">
+                    </div>
+                    <button type="submit">Add</button>
+                </form>
             </div>
 
             <main>
