changed project filter from dropdown to a list

--- a/src/index.html
+++ b/src/index.html
@@ -12,14 +12,6 @@
     <body>
         <div id="container">
             <div>
-                <form id="filter-todos-form">
-                    <div class="form-control">
-                        <label for="filter-project">Project</label>
-                        <select name="project" id="filter-project"></select>
-                    </div>
-                    <button type="submit">Filter</button>
-                </form>
-
                 <form id="new-project-form">
                     <div class="form-control">
                         <label for="new-project">Project</label>
@@ -27,7 +19,9 @@
                     </div>
                     <button type="submit">Add</button>
                 </form>
+                <div id="project-list"></div>
             </div>
+
 
             <main>
                 <div id="test">
