--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
             <form id="new-project-form">
                 <div class="form-control">
                     <label for="new-project">Project</label>
-                    <input type="text" name="project" id="new-project" />
+                    <input type="text" name="project" id="new-project" required />
                 </div>
                 <button type="submit">Add</button>
             </form>
@@ -25,13 +25,13 @@
             <form id="create-todo-form">
                 <div class="form-control">
                     <label for="title">Title</label>
-                    <input type="text" name="title" id="title" />
+                    <input type="text" name="title" id="title" required />
                 </div>
                 <button type="submit">Add</button>
             </form>
 
             <div id="todo-list"></div>
-            
+
         </div>
     </body>
 </html>
